--- a/Code samples/GlobalVerifierSample/GlobalVerifierSample/GlobalVerifierSample.csproj
+++ b/Code samples/GlobalVerifierSample/GlobalVerifierSample/GlobalVerifierSample.csproj
@@ -6,7 +6,7 @@
 		<OutputType>Library</OutputType>
 		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 		<UseWindowsForms>true</UseWindowsForms>
-		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
+		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
 		<ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
 	</PropertyGroup>
 	<ItemGroup>
