--- a/Trados Studio InQuote/Sdl.Community.InvoiceAndQuotes/Sdl.Community.InvoiceAndQuotes.csproj
+++ b/Trados Studio InQuote/Sdl.Community.InvoiceAndQuotes/Sdl.Community.InvoiceAndQuotes.csproj
@@ -6,7 +6,7 @@
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<SignAssembly>True</SignAssembly>
 		<AssemblyOriginatorKeyFile>SdlCommunity.snk</AssemblyOriginatorKeyFile>
-    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
 	</PropertyGroup>
 	<ItemGroup>
 	  <Compile Remove="Resources\**" />
