--- a/Capture QA Rule State/CaptureQARuleState/CaptureQARuleState.csproj
+++ b/Capture QA Rule State/CaptureQARuleState/CaptureQARuleState.csproj
@@ -6,7 +6,7 @@
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<LangVersion>latest</LangVersion>
 		<UseWPF>true</UseWPF>
-		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
+		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
 		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 	</PropertyGroup>
 	<ItemGroup>
