--- a/Code samples/ChromiumBrowserSupport/ChromiumBrowserSupport/ChromiumBrowserSupport.csproj
+++ b/Code samples/ChromiumBrowserSupport/ChromiumBrowserSupport/ChromiumBrowserSupport.csproj
@@ -12,7 +12,7 @@
     <AssemblyName>ChromiumBrowserSupport</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
     <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
