--- a/Code samples/Plugin_ModifyAutoSubstitutionSettings/Plugin_ModifyAutoSubstitutionSettings.csproj
+++ b/Code samples/Plugin_ModifyAutoSubstitutionSettings/Plugin_ModifyAutoSubstitutionSettings.csproj
@@ -5,7 +5,7 @@
         <PlatformTarget>x64</PlatformTarget>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
-    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Sdl.Core.Globalization">
