--- a/Code samples/StandAlone_CreateEmptyFileBasedTMFromAnother_UsingSameResources/StandAlone_CreateEmptyFileBasedTMFromAnother_UsingSameResources.csproj
+++ b/Code samples/StandAlone_CreateEmptyFileBasedTMFromAnother_UsingSameResources/StandAlone_CreateEmptyFileBasedTMFromAnother_UsingSameResources.csproj
@@ -5,7 +5,7 @@
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <PlatformTarget>x86</PlatformTarget>
     <OutputType>Exe</OutputType>
-    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
