--- a/Reports Viewer Plus/Reports.Viewer/Reports.Viewer.csproj
+++ b/Reports Viewer Plus/Reports.Viewer/Reports.Viewer.csproj
@@ -7,7 +7,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <AssemblyName>Reports.Viewer.Plus</AssemblyName>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
     <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
     <CefSharpAnyCpuSupport>true</CefSharpAnyCpuSupport>
     <CefSharpBuildAction>Content</CefSharpBuildAction>
