--- a/Stylesheet Verifier/StyleSheetVerifier/Sdl.Community.StyleSheetVerifier.csproj
+++ b/Stylesheet Verifier/StyleSheetVerifier/Sdl.Community.StyleSheetVerifier.csproj
@@ -18,7 +18,7 @@
     <AssemblyOriginatorKeyFile>..\..\SdlCommunity.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
     <CreatePluginPackage>true</CreatePluginPackage>
   </PropertyGroup>
   <ItemGroup>
