--- a/Trados Translation Memory Management Utility/Sdl.Community.Utilities.TMTool.Tasks.RevertIndex/Sdl.Community.Utilities.TMTool.Tasks.RevertIndex.csproj
+++ b/Trados Translation Memory Management Utility/Sdl.Community.Utilities.TMTool.Tasks.RevertIndex/Sdl.Community.Utilities.TMTool.Tasks.RevertIndex.csproj
@@ -15,7 +15,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
-    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19</TradosFolder>
+    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Sdl.LanguagePlatform.TranslationMemory">
