--- a/SDLXLIFF Toolkit/SdlXliff.Toolkit.Integration/SdlXliff.Toolkit.Integration.csproj
+++ b/SDLXLIFF Toolkit/SdlXliff.Toolkit.Integration/SdlXliff.Toolkit.Integration.csproj
@@ -23,7 +23,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>SdlCommunity.snk</AssemblyOriginatorKeyFile>
-    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
+    <TradosFolder>$(ProgramW6432)\Trados\Trados Studio\Studio19Beta</TradosFolder>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
