--- a/SDLXLIFF Toolkit/SdlXliffToolkit/SdlXliffToolkit.csproj
+++ b/SDLXLIFF Toolkit/SdlXliffToolkit/SdlXliffToolkit.csproj
@@ -18,7 +18,7 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup>
-    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
+    <TradosFolder>$(ProgramW6432)\Trados\Trados Studio\Studio19Beta</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Sdl.Desktop.IntegrationApi">
