--- a/AutoHotKey Manager/Sdl.Community.AhkPlugin/Sdl.Community.AhkPlugin.csproj
+++ b/AutoHotKey Manager/Sdl.Community.AhkPlugin/Sdl.Community.AhkPlugin.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net48</TargetFramework>
         <PlatformTarget>x64</PlatformTarget>
 		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
-		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
+		<TradosFolder>$(ProgramW6432)\Trados\Trados Studio\Studio19Beta</TradosFolder>
 	</PropertyGroup>
 
 	<PropertyGroup>
