--- a/Export to Excel/Export to Excel/Sdl.Community.ExportToExcel.csproj
+++ b/Export to Excel/Export to Excel/Sdl.Community.ExportToExcel.csproj
@@ -11,7 +11,7 @@
 		<AssemblyOriginatorKeyFile>SdlCommunity.snk</AssemblyOriginatorKeyFile>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
-		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
+		<TradosFolder>$(ProgramW6432)\Trados\Trados Studio\Studio19Beta</TradosFolder>
 	</PropertyGroup>
 	
 	<ItemGroup>
