--- a/Fail Safe Task/Sdl.Community.FailSafeTask/Sdl.Community.FailSafeTask.csproj
+++ b/Fail Safe Task/Sdl.Community.FailSafeTask/Sdl.Community.FailSafeTask.csproj
@@ -5,7 +5,7 @@
         <PlatformTarget>x64</PlatformTarget>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
-		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
+		<TradosFolder>$(ProgramW6432)\Trados\Trados Studio\Studio19Beta</TradosFolder>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<UseWPF>true</UseWPF>
 	</PropertyGroup>
