--- a/IATE Real-time Terminology/IATETerminologyProvider/Sdl.Community.IATETerminologyProvider.csproj
+++ b/IATE Real-time Terminology/IATETerminologyProvider/Sdl.Community.IATETerminologyProvider.csproj
@@ -10,7 +10,7 @@
 		<UseWPF>true</UseWPF>
 	</PropertyGroup>
   <PropertyGroup>
-    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
+    <TradosFolder>$(ProgramW6432)\Trados\Trados Studio\Studio19Beta</TradosFolder>
     <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
   </PropertyGroup>
   <ItemGroup>
