--- a/InterpretBank Terminology Provider/InterpretBankTests/InterpretBankTests.csproj
+++ b/InterpretBank Terminology Provider/InterpretBankTests/InterpretBankTests.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>net48</TargetFramework>
         <PlatformTarget>x64</PlatformTarget>
-		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
+		<TradosFolder>$(ProgramW6432)\Trados\Trados Studio\Studio19Beta</TradosFolder>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<LangVersion>latest</LangVersion>
