--- a/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Core/Sdl.Community.PostEdit.Compare.Core.csproj
+++ b/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Core/Sdl.Community.PostEdit.Compare.Core.csproj
@@ -25,7 +25,7 @@
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
   </PropertyGroup>
   <PropertyGroup>
-    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
+    <TradosFolder>$(ProgramW6432)\Trados\Trados Studio\Studio19Beta</TradosFolder>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <OutputPath>bin\Debug</OutputPath>
