--- a/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/Sdl.Community.PostEdit.Versions.csproj
+++ b/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/Sdl.Community.PostEdit.Versions.csproj
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
-    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
+    <TradosFolder>$(ProgramW6432)\Trados\Trados Studio\Studio19Beta</TradosFolder>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <OutputPath>bin\Debug</OutputPath>
