--- a/Reports Viewer Plus/Reports.Viewer.Api/Reports.Viewer.Api.csproj
+++ b/Reports Viewer Plus/Reports.Viewer.Api/Reports.Viewer.Api.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>Reports.Viewer.Api.snk</AssemblyOriginatorKeyFile>
-    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
+    <TradosFolder>$(ProgramW6432)\Trados\Trados Studio\Studio19Beta</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
