--- a/Trados Number Verifier/Trados Number Verifier/Sdl.Community.NumberVerifier.csproj
+++ b/Trados Number Verifier/Trados Number Verifier/Sdl.Community.NumberVerifier.csproj
@@ -7,7 +7,7 @@
 		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
 		<CreatePluginPackage>true</CreatePluginPackage>
 		<AssemblyOriginatorKeyFile>..\..\SdlCommunity.snk</AssemblyOriginatorKeyFile>
-		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
+		<TradosFolder>$(ProgramW6432)\Trados\Trados Studio\Studio19Beta</TradosFolder>
 		<PlatformTarget>x64</PlatformTarget>
 		<LangVersion>latest</LangVersion>
 		<SignAssembly>true</SignAssembly>
