--- a/Trados Studio Target Renamer/Trados.TargetRenamer/Trados.TargetRenamer/Trados.TargetRenamer.csproj
+++ b/Trados Studio Target Renamer/Trados.TargetRenamer/Trados.TargetRenamer/Trados.TargetRenamer.csproj
@@ -16,7 +16,7 @@
 
 	<PropertyGroup>
 		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
-		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
+		<TradosFolder>$(ProgramW6432)\Trados\Trados Studio\Studio19Beta</TradosFolder>
 	</PropertyGroup>
 
 	<ItemGroup>
