--- a/Trados Transcreate/SDLTranscreate/Transcreate.csproj
+++ b/Trados Transcreate/SDLTranscreate/Transcreate.csproj
@@ -13,7 +13,7 @@
 		<LangVersion>latest</LangVersion>
 	</PropertyGroup>
 	<PropertyGroup>
-		<TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
+		<TradosFolder>$(ProgramW6432)\Trados\Trados Studio\Studio19Beta</TradosFolder>
 	</PropertyGroup>
 	<ItemGroup>
 		<Reference Include="Rws.MultiSelectComboBox">
