--- a/Trados Translation Memory Management Utility/Sdl.Community.TranslationMemoryManagementUtility/Sdl.Community.TranslationMemoryManagementUtility.csproj
+++ b/Trados Translation Memory Management Utility/Sdl.Community.TranslationMemoryManagementUtility/Sdl.Community.TranslationMemoryManagementUtility.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
-    <TradosFolder>C:\Program Files\Trados\Trados Studio\Studio19Beta</TradosFolder>
+    <TradosFolder>$(ProgramW6432)\Trados\Trados Studio\Studio19Beta</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Sdl.Desktop.IntegrationApi">
