Change name of the plug-in

--- a/Verify Files – Audit Report/VerifyFilesAuditReport_Tests/VerifyFilesAuditReport_Tests.csproj
+++ b/Verify Files – Audit Report/VerifyFilesAuditReport_Tests/VerifyFilesAuditReport_Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\QATracker\QATracker.csproj" />
+    <ProjectReference Include="..\CaptureQARuleState\VerifyFilesAuditReport.csproj" />
   </ItemGroup>
 
   <ItemGroup>
