SDLTM Import Plus 5.0.0.1: Fix NRE

--- a/SDLTM Import Plus/SDLTM.Import/SDLTM.Import.csproj
+++ b/SDLTM Import Plus/SDLTM.Import/SDLTM.Import.csproj
@@ -203,5 +203,6 @@
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>SdlCommunity.snk</AssemblyOriginatorKeyFile>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 </Project>
